# pavucontrol-qt

./: AUTHORS  CMakeLists.txt  README.md  data.qrc
src/: CMakeLists.txt  cardwidget.cc  cardwidget.h  channel.cc  channel.h  devicewidget.cc  devicewidget.h  devicewidget.ui  elidinglabel.cc  elidinglabel.h  inputdevicewidget.cc  inputdevicewidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  minimalstreamwidget.cc  minimalstreamwidget.h  outputwidget.cc  outputwidget.h  pavucontrol.cc  pavucontrol.h  playbackwidget.cc  playbackwidget.h  recordingwidget.cc  recordingwidget.h  rolewidget.cc  sinkinputwidget.cc  sinkinputwidget.h  sinkwidget.cc  sinkwidget.h  sourceoutputwidget.cc  sourceoutputwidget.h  sourcewidget.cc  sourcewidget.h  streamwidget.cc  streamwidget.h  utils.h  wavplay.cc  wavplay.h
